tests/baselines/reference/propertyAccess1.errors.txt
==== tests/cases/compiler/propertyAccess1.ts (1 errors) ====
    var foo: { a: number; };
    foo.a = 4;
    foo.b = 5;
        ~
!!! propertyAccess1.ts(3,5): error TS2094: The property 'b' does not exist on value of type '{ a: number; }'.